example-6 updated with configmap and secret

--- a/poc/example-6/Dockerfile
+++ b/poc/example-6/Dockerfile
@@ -8,6 +8,11 @@ RUN pip install psycopg2
 ENV MODULE_NAME=app.main
 ENV VARIABLE_NAME=app
 
+# install dependencies
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+
+
 EXPOSE 80
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
