--- a/poc/example-8/docker-compose.yml
+++ b/poc/example-8/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - "8000:8000"
     depends_on:
       - db
+    deploy:
+      replicas: 3
     
   db:
     image: postgres:15-alpine
@@ -23,3 +25,4 @@ services:
 
 volumes:
   pgdata:
+
